# data-selection

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  problems.md  pyproject.toml
.agents/skills/: paper-figure
.claude/: settings.json
.claude/skills/: paper-figure  paper-writing
.github/workflows/: ci.yml
configs/peft/: ia3_attn.yaml  lora_r16_qkvo.yaml  lora_r8_qv.yaml
configs/pipeline/: default.yaml
configs/task/: gsm8k.yaml
data/: sample_tiny.jsonl
docs/: experiment_design.md  motivation_experiment_design.md  pcu_select_design.md  pcu_select_experiment_design.md  pcu_select_motivation_design.md  pcu_select_research_plan.md  weekly_report_2026-06-18.md
docs/revision_plan/: 01_main_result_reframing.md  02_metric_averaging.md  03_reproducibility.md  04_baselines.md  05_empirical_assumptions.md  06_cost_claim.md  07_generalization.md  08_consistency_polish.md  README.md
paper/: .fdb_latexmk  .fls  AGENTS.md  ReproducibilityChecklist.fdb_latexmk  ReproducibilityChecklist.fls  ReproducibilityChecklist.tex  aaai2027.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  project_context.md
paper/Figures/: pcu-select-architecture-spec.md  (+1 more)
result/: README.md  README_SYNTHETIC_DATA.md  gen_synthetic_data.py  validate_result_bundle.py
scripts/: build_features.py  build_hi_fidelity.py  compute_lo_fidelity.py  encode_task.py  select_subset.py  train_scorer.py
tests/: test_cli_smoke.py  test_difficulty.py  test_e2e.py  test_experiment_registry.py  test_feature_cache.py  test_labeler.py  test_lo_fidelity.py  test_native_peft.py  test_ood.py  test_peft_encoder.py  test_peft_families.py  test_scorer.py  test_selection.py  test_selector_runner.py  test_short_update.py  test_stats.py
(+143 files in other folders)
