[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcu-select"
version = "0.0.1"
description = "PEFT-Conditional Utility Selection: cross-PEFT data-efficient fine-tuning."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "numpy",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "pyyaml",
    "tqdm",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
viz = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# `l` is used throughout as a transformer layer index, matching the math
# notation in docs/pcu_select_design.md (Ω = {(l, m)}); allow it.
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
